Documentation edits made through Mintlify web editor

--- a/acceptable-use-policy.mdx
+++ b/acceptable-use-policy.mdx
@@ -27,14 +27,14 @@ The following violations will result in account termination or legal action:
   <Card title="🌪️ DDoS Operations">
     Launching attacks (booter services), any kind of stress testing, or using EDBB infrastructure for attacks is prohibited.
   </Card>
-  <Card title="🛍️ Counterfeit Commerce">
-    - Hosting websites selling counterfeit products (e.g., Nike, Adidas, Moncler) leads to account suspension.
+  <Card title='🛍️ Counterfeit Commerce, "fake shops"'>
+    - Hosting websites selling counterfeit products (e.g., fake Nike, Adidas, Moncler, ...) leads to account suspension.
   </Card>
 </CardGroup>
 
 ---
 
-## 2. Network & Platform Safeguards
+## 2. Network and Platform Safeguards
 
 The following activities are  forbidden and will lead to account suspension or termination.
 
@@ -55,7 +55,7 @@ The following activities are  forbidden and will lead to account suspension or t
     Entry nodes and middle relays are allowed; TOR exit nodes, I2P outproxies, and similar egress services are forbidden.
   </Card>
   <Card title="💬 IRC Hosting">
-    IRC workloads attract abuse. Review the [Advisory](https://docs.edbb.com//faq/traffic-bandwidth/dos-attacks/advisory-for-high-risk-clients) for High-Risk Clients before deploying IRC infrastructure.
+    IRC workloads attract attacks. Review the [Advisory for High-Risk Clients](https://docs.edbb.com//faq/traffic-bandwidth/dos-attacks/advisory-for-high-risk-clients) before deploying IRC-related services.
   </Card>
   <Card title="⛏️ Cryptocurrency Mining">
     Cryptocurrency mining activities are prohibited on EDBB VPS plans (and no longer profitable anyway)
@@ -64,7 +64,7 @@ The following activities are  forbidden and will lead to account suspension or t
 
 ---
 
-## 3. Content & Conduct Rules
+## 3. Content and Conduct Rules
 
 Users must respect the dignity, rights, and safety of others. The following activities are strictly forbidden and will result in immediate account termination:
 
@@ -91,10 +91,18 @@ Users must respect the dignity, rights, and safety of others. The following acti
 
 ---
 
-## Staying Compliant
+## 4. Staying Compliant
 
 - Keep your contact details up-to-date so you can respond quickly to abuse notifications.
 - Apply strong passwords, MFA, and regular patching to prevent compromised workloads.
 - Unsure about an edge case? Contact EDBB Support for clarification before deploying.
 
 Following these guidelines keeps the network safe for everyone and ensures your services stay online without interruption.
+
+## 5. Security Research and Authorized Testing Activities 
+
+We actively support verified security research and controlled commercial testing.
+
+If your work includes hosting sinkholes, operating honeypots, monitoring network segments, conducting forensic or traffic analysis, or performing authorized stress and resilience tests — we can provide suitable exemptions and infrastructure guidance.
+
+Security software developers, accredited research teams, and governmental entities conducting legitimate investigations are welcome to collaborate under predefined security frameworks.
