--- a/backups.mdx
+++ b/backups.mdx
@@ -16,7 +16,7 @@ It is important that you manage your own backups to protect your data.
 
 ### **Why Regular Backups Are Essential for Your VPS Data Protection**
 
-Regular backups are essential for protecting your data against hardware failures, accidental deletions, or cyber threats. Without proper backups, you risk losing critical data, leading to costly downtime or permanent data loss. By scheduling regular backups, you safeguard your systems, enabling quick recovery and uninterrupted operations, minimizing significant disruptions.
+> Regular backups are essential for protecting your data against hardware failures, accidental deletions, or cyber threats. Without proper backups, you risk losing critical data, leading to costly downtime or permanent data loss. By scheduling regular backups, you safeguard your systems, enabling quick recovery and uninterrupted operations, minimizing significant disruptions.
 
 ## Why It Matters
 
@@ -42,53 +42,80 @@ Having regular backups makes sure you can recover your VPS fast — even after s
   <Step title="1. Pick your backup type">
     Choose the method that best fits your setup:
 
-    - **Full snapshots:** save the whole server or disk. Best for complete restores.  
-      Tools: <code>dd</code>, <code>qemu-img</code>, or hosting snapshots.
+    - **Full snapshots:** save the whole server or disk. Best for complete restores.\
+      Tools: <code>
+      dd</code>
 
-    - **File backups:** copy only selected files or folders. Great for websites, configs, and databases.  
-      Tools: <code>tar</code>, <code>rsync</code>.
+      , <code>
+      qemu-img</code>
 
-    - **Cloud or incremental backups:** keep changes synced to remote storage for safety.  
-      Tools: <code>rclone</code>, <code>restic</code>, <code>borg</code>.
+      , or hosting snapshots.
+    - **File backups:** copy only selected files or folders. Great for websites, configs, and databases.\
+      Tools: <code>
+      tar</code>
+
+      , <code>
+      rsync</code>
+
+      .
+    - **Cloud or incremental backups:** keep changes synced to remote storage for safety.\
+      Tools: <code>
+      rclone</code>
+
+      , <code>
+      restic</code>
+
+      , <code>
+      borg</code>
+
+      .
   </Step>
-
   <Step title="2. Automate your backups">
     Backups you run manually are easy to forget — automate them with cron or systemd timers.
 
     **Example (runs every day at 2:30 AM):**
+
     ```bash
     crontab -e
     ```
+
     Then add:
+
     ```bash
     30 2 * * * /usr/local/bin/backup.sh >> /var/log/backup.log 2>&1
     ```
 
     You can also sync your files automatically to cloud storage or another VPS:
+
     ```bash
     rclone sync /var/www remote:backups/server1 --exclude "cache/**"
     ```
   </Step>
-
   <Step title="3. Check and clean your backups">
     A backup only helps if it actually works.
 
-    - **Check file hashes:** use SHA256 or MD5 to verify backups are valid.  
-    - **Test restores:** try extracting or mounting backups in a test folder.  
-    - **Clean up old files:** delete backups older than 30 days.  
+    - **Check file hashes:** use SHA256 or MD5 to verify backups are valid.
+    - **Test restores:** try extracting or mounting backups in a test folder.
+    - **Clean up old files:** delete backups older than 30 days.
+
       ```bash
       find /backups -type f -mtime +30 -delete
       ```
   </Step>
-
   <Step title="4. Keep a copy somewhere safe">
     Don’t store all backups on one machine.
 
-    - Keep one local copy for quick recovery.  
-    - Upload another to external or cloud storage (S3, Backblaze, Google Drive, etc.).  
-    - Encrypt files before upload using <code>gpg</code> or <code>restic --password-command</code>.
+    - Keep one local copy for quick recovery.
+    - Upload another to external or cloud storage (S3, Backblaze, Google Drive, etc.).
+    - Encrypt files before upload using <code>
+      gpg</code>
 
-    💡 *Tip:* Follow the **3-2-1 rule** — 3 copies, 2 different places, 1 offsite.
+       or <code>
+      restic --password-command</code>
+
+      .
+
+    💡 _Tip:_ Follow the **3-2-1 rule** — 3 copies, 2 different places, 1 offsite.
   </Step>
 </Steps>
 
