Documentation edits made through Mintlify web editor

--- a/acceptable-use-policy.mdx
+++ b/acceptable-use-policy.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Usage Rules (AUP)"
 description: "Use cases that violate EDBB's Acceptable Use Policy (AUP), including but not limited to child sexual abuse material, illegal content, and other prohibited activities."
 ---
 
-## 🔒 Prohibited Applications and Activities
+## Prohibited Applications and Activities
 
 Our **Acceptable Use Policy (AUP)** explains the terms of using our services. You must comply with these policies and engage only in legal activities. The following violations will result in account termination or legal action:
 
@@ -12,7 +12,7 @@ We split the rules into three quick-reference sections so you can confirm compli
 
 ## 1. Zero-Tolerance Offences
 
-The following violations will result in account termination or legal action:
+The following violations will result in account termination and legal action:
 
 <CardGroup cols={2}>
   <Card title="🚨 Child Sexual Abuse Material CSAM">
@@ -36,7 +36,7 @@ The following violations will result in account termination or legal action:
 
 ## 2. Network and Platform Safeguards
 
-The following activities are  forbidden and will lead to account suspension or termination.
+The following activities are forbidden and will lead to account suspension or termination.
 
 <CardGroup cols={2}>
   <Card title="📨 SPAM & Bulk Messaging">
@@ -66,7 +66,7 @@ The following activities are  forbidden and will lead to account suspension or t
 
 ## 3. Content and Conduct Rules
 
-Users must respect the dignity, rights, and safety of others. The following activities are strictly forbidden and will result in immediate account termination:
+Users must respect the dignity, rights, and safety of others. The following activities are strictly forbidden and will result in account termination:
 
 <CardGroup cols={2}>
   <Card title="📚 Intellectual Property">
@@ -99,7 +99,7 @@ Users must respect the dignity, rights, and safety of others. The following acti
 
 Following these guidelines keeps the network safe for everyone and ensures your services stay online without interruption.
 
-## 5. Security Research and Authorized Testing Activities 
+## 5. Security Research and Authorized Testing Activities
 
 We actively support verified security research and controlled commercial testing.
 
