Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -12,7 +12,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   Important: Reinstalling your VPS will permanently erase all data. Make sure you have backups before proceeding.
 </Warning>
 
-## Run AutoInstall in Five Easy Steps
+## Run Automated Installers in Five Easy Steps
 
 <Steps>
   <Step title="Locate your VPS in the control panel">
@@ -20,7 +20,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
      EDBB Control Panel</a>
 
     Go to <strong>Services</strong>
-    and select the VPS you would like to reinstall.
+     and select the VPS you would like to reinstall.
   </Step>
   <Step title="Switch to Installation tab → Select Automated Installers">
     Use the <strong>Installation</strong>
@@ -52,7 +52,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
     Enter a password (or paste an SSH public key) and click <strong>Start the installation.</strong>
      Our dashboard initiates the installation.
 
-     We do not send a new Welcome Email when you reinstall! The password you specify during installation will be your new root (Linux) or Windows Administrator password.
+    We do not send a new Welcome Email when you reinstall! The password you specify during installation will be your new root (Linux) or Windows Administrator password.
   </Step>
 </Steps>
 
