Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Reinstall Your VPS (Linux or Windows)"
 sidebarTitle: "Reinstall VPS"
-description: "Use the Installation tab in the EDBB Control Panel to reinstall your VPS with a fresh Linux or Windows OS and user-defined password"
+description: "Use the Installation tab in the EDBB Control Panel to reinstall your VPS with a fresh Linux or Windows OS and user-defined password or SSH-key."
 ---
 
 import { CtaButton } from "/snippets/cta-button.mdx";
@@ -12,7 +12,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   Important: Reinstalling your VPS will permanently erase all data. Make sure you have backups before proceeding.
 </Warning>
 
-## Run Automated Installers in Five Easy Steps
+## Automated Installation in 5 Easy Steps
 
 <Steps>
   <Step title="Locate your VPS in the control panel">
@@ -62,7 +62,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 ---
 
-## Track Progress & Reconnect
+## Track Progress, then Connect
 
 | OS          | Approx. time | What happens / What to do                                                                                                                                                                                                                                   |
 | ----------- | ------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -76,7 +76,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 ---
 
-## Need a Custom Image Instead?
+## Install a Custom Image 
 
 Prefer to Bring Your Own .qcow2 image and/or run a cloud-init automation? Use the Cloud-Init workflow to keep full control over first boot actions.
 
