Documentation edits made through Mintlify web editor

--- a/vps-management/basic-ipv6-troubleshooting.mdx
+++ b/vps-management/basic-ipv6-troubleshooting.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "IPv6 Troubleshooting"
 description: "Run through portal and OS-level checks to resolve IPv6 reachability problems on your EDBB VPS."
 ---
 
-# IPv6 Troubleshooting Playbook
+## IPv6 Troubleshooting Playbook
 
 <Info>
   IPv6 relies on the address, gateway, and DNS values shown on the Network tab. Confirm those details first, then follow these quick checks to restore connectivity.
