--- a/vps-management/bring-your-own-iso.mdx
+++ b/vps-management/bring-your-own-iso.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Upload Custom ISO"
 description: "EDBB lets you mount your own ISO images—install custom OS builds, appliances, or bare-metal backups directly from the portal."
 ---
 
-# Bring Your Own ISO
+## Bring Your Own ISO
 
 <Info>
   Uploading a custom ISO lets you boot recovery toolkits, bespoke installers, or
