--- a/vps-management/cloud-init-vps-installation.mdx
+++ b/vps-management/cloud-init-vps-installation.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Cloud-Init"
 description: "Upload a qcow2 image with Cloud-Init support, supply your user-data, and boot it via the EDBB Installation → Custom Image workflow."
 ---
 
-# Bring Your Own Cloud-Init Image
+## Bring Your Own Cloud-Init Image
 
 <Info>
   Cloud-Init lets you boot a custom qcow2 image and execute first-boot automation (user creation, key injection, package installs) without touching the console. Make sure you keep independent backups—the upload process wipes the VPS disk.
