--- a/vps-management/how-to-change-ip-address-in-windows-server.mdx
+++ b/vps-management/how-to-change-ip-address-in-windows-server.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Change IP (Windows)"
 description: "Collect the new IPv4 details from the Network tab, change them in Windows Server, and verify connectivity."
 ---
 
-# Change the IPv4 Address in Windows Server
+## Change the IPv4 Address in Windows Server
 
 <Info>
   Before editing Windows networking, note the IPv4 address, subnet, gateway, and DNS values from the EDBB portal. Changing settings interrupts connectivity—plan a brief maintenance window.
