--- a/vps-management/ip-address-information.mdx
+++ b/vps-management/ip-address-information.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "VPS IP Settings"
 description: "Find IPv4, IPv6, gateway, and DNS details for your VPS on the Network tab of the EDBB portal."
 ---
 
-# Network Tab Overview
+## Network Tab Overview
 
 <Info>
   The Network tab shows every IP assigned to your VPS plus the gateways and DNS resolvers you need when configuring the operating system. Use it as your source of truth before editing network interfaces inside the guest OS.
