--- a/vps-management/ipv6-configuration.mdx
+++ b/vps-management/ipv6-configuration.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "IPv6 Configuration"
 description: "Find your IPv6 range and gateway in the Network tab, then add addresses and routes to your VPS."
 ---
 
-# IPv6 on EDBB VPS
+## IPv6 on EDBB VPS
 
 <Info>
   Every VPS includes a dedicated <strong>/64 equivalent</strong> IPv6 range. Routing to the gateway requires configuring addresses with a <strong>/48 prefix</strong> inside your operating system.
