--- a/vps-management/reset-windows-admin-password.mdx
+++ b/vps-management/reset-windows-admin-password.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Restore Windows Administrator Access on EDBB VPS"
+title: "Set New Windows Administrator Password"
 sidebarTitle: "Reset Windows Password"
-description: "Boot the Windows password-helper ISO, clear the Administrator password, and assign a new credential in a few minutes."
+description: "Boot the Windows password-helper ISO, clear the Administrator password, and assign a new Password in a few minutes."
 ---
 
-# Reset the Windows Administrator Password
+## Reset the Windows Administrator Password
 
 <Info>
   Every EDBB Windows VPS includes a password-helper ISO. Booting from it lets you clear the local SAM database and set a new Administrator password without reinstalling the operating system.
