--- a/vps-management/system-configuration-dialog.mdx
+++ b/vps-management/system-configuration-dialog.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "System Configuration"
 description: "Tune CPU, boot, storage, network, and display settings for your EDBB VPS using the System Configuration dialog."
 ---
 
-# System Configuration Overview
+## System Configuration Overview
 
 <Info>
   The System Configuration dialog controls how the hypervisor presents hardware to your VPS. Changes typically require a reboot—save your work before applying them.
