--- a/vps-management/your-support-pin.mdx
+++ b/vps-management/your-support-pin.mdx
@@ -1,10 +1,10 @@
 ---
 title: "How to Find and Use Your EDBB Support PIN"
 sidebarTitle: "Support PIN"
-description: "Locate the Support PIN in the portal and understand when EDBB Support will ask for it."
+description: "Locate the Support PIN in the control panel and understand when you will need it."
 ---
 
-# Manage Your Support PIN
+## Locate Your Support PIN
 
 <Info>
   The Support PIN proves account ownership when you contact EDBB about billing,
@@ -46,7 +46,7 @@ Providing the PIN with your first message speeds up verification so we can actio
 
 <CardGroup cols={3}>
   <Card title="🔒 Store & rotate">
-    Keep the PIN in a shared password manager. Rotate it if team membership changes or if you suspect it leaked.
+    Keep the PIN in a shared password manager.
   </Card>
   <Card title="👥 Limit visibility">
     Grant access only to staff who handle billing or infrastructure escalations. Remove old entries promptly.
