--- a/vps-management/manually-change-the-ip-address-in-ubuntu-versions-1804-to-2404.mdx
+++ b/vps-management/manually-change-the-ip-address-in-ubuntu-versions-1804-to-2404.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Ubuntu IP Change"
 description: "Use Netplan to change IPv4 addresses, gateways, or DNS entries on Ubuntu VPS instances running on EDBB."
 ---
 
-# Update IPv4 Settings via Netplan
+## Update IPv4 Settings via Netplan
 
 <Info>
   Netplan is the default network configuration tool on Ubuntu 18.04 through 24.04. Always grab the latest IP details from the EDBB portal before editing configuration files.
