--- a/vps-management/mount-iso-image.mdx
+++ b/vps-management/mount-iso-image.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Mount ISO"
 description: "Load recovery tools or custom installers by mounting an ISO directly from the EDBB portal."
 ---
 
-# Mount ISO Images from the Portal
+## Mount ISO Images from the Portal
 
 <Info>
   Mounting an ISO temporarily changes the boot order. Be ready for the VPS to reboot and save any work before you proceed.
