--- a/vps-management/reset-root-password-linux.mdx
+++ b/vps-management/reset-root-password-linux.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Regain Linux Root Access on EDBB VPS"
-sidebarTitle: "Reset Root Access"
-description: "Use the EDBB password-helper ISO to reset the Linux root password, then return the VPS to its normal boot order."
+title: "Set New Linux Root Password on your EDBB VPS"
+sidebarTitle: "Reset Root Password"
+description: "Use the EDBB password-helper ISO to reset your Linux root password"
 ---
 
-# Reset Root Password with the Helper ISO
+## Reset Root Password with the Helper ISO
 
 <Info>
-  Every EDBB VPS ships with a password-helper ISO. Booting from it lets you assign a brand-new root password without reinstalling the operating system or touching your disks.
+  Every EDBB VPS ships with a password-helper ISO. Booting from it lets you assign a new root password without reinstalling the operating system or touching your disks.
 </Info>
 
 ---
@@ -16,7 +16,10 @@ description: "Use the EDBB password-helper ISO to reset the Linux root password,
 
 <CardGroup cols={3}>
   <Card title="🔐 Portal Access Ready">
-    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. All steps happen from the service dashboard.
+    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">
+    EDBB VPS Portal</a>
+
+    . All steps happen from the service dashboard.
   </Card>
   <Card title="💾 Safe Maintenance Window">
     Plan a brief outage. The VPS reboots twice—once to load the helper ISO, once to return to disk.
@@ -28,11 +31,12 @@ description: "Use the EDBB password-helper ISO to reset the Linux root password,
 
 ---
 
-## Step 1 – Open the VPS Dashboard
+## Step 1 – Open the Control Panel
 
 <Steps>
   <Step title="Log in">
-    Sign in to the EDBB portal, go to <strong>Services</strong>, and open the VPS that needs root access restored.
+    Sign in to the EDBB control panel, go to <strong>Services</strong>
+    , and select the VPS that needs a fresh root password.
   </Step>
   <Step title="Check power state">
     Make sure the VPS is running. The helper flow reboots automatically—no manual shutdown is required.
@@ -45,13 +49,23 @@ description: "Use the EDBB password-helper ISO to reset the Linux root password,
 
 <Steps>
   <Step title="Enable console access">
-    In the quick action column on the left, expand the red <strong>VNC Off</strong> button and choose <strong>Enable VNC</strong>. If you need extra guidance, see the <a href="https://docs.edbb.com/enable-vnc-server">VNC guide</a>.
+    In the quick action column on the left, expand the red <strong>VNC Off</strong>
+     button and choose <strong>Enable VNC</strong>
+    . If you need extra guidance, see the <a href="https://docs.edbb.com/enable-vnc-server">
+    VNC guide</a>
+
+    .
   </Step>
   <Step title="Open Installation → ISO Boot">
-    Switch to the <strong>Installation</strong> tab at the top of the service view, then click the <strong>ISO Boot</strong> sub-tab.
+    Switch to the <strong>Installation</strong>
+     tab at the top of the service view, then click the <strong>ISO Boot</strong>
+     sub-tab.
   </Step>
   <Step title="Mount the helper ISO">
-    Select <strong>1_Password-Reset-Helper.iso</strong>, tick <strong>Force reset & boot from the selected ISO</strong>, and click <strong>Mount ISO</strong>.
+    Select <strong>1_Password-Reset-Helper.iso</strong>
+    , tick <strong>Force reset & boot from the selected ISO</strong>
+    , and click <strong>Mount ISO</strong>
+    .
   </Step>
   <Step title="Open the console">
     Launch the built-in console (or your preferred VNC client) to watch the helper boot.
@@ -68,26 +82,22 @@ description: "Use the EDBB password-helper ISO to reset the Linux root password,
 2. Wait until the helper finishes loading—you’ll see the on-screen prompt.
 
    ![Reset Linux Password](/assets/uLxSPwfKVMf9QP5wS5E-loadiso.png)
-
 3. Enter the new root password and press **Enter**.
 
    ![Reset Linux Password](/assets/tXo35rruULtcDq5XS2w-Enter-new-root-password.png)
-
 4. Re-enter the password to confirm. A success message appears.
 
    ![Reset Linux Password](/assets/jeKwpMQkTdx2ZDzyQxib-continue.png)
-
 5. Press **Enter** again. The helper automatically unmounts itself and reboots the VPS from disk.
 
    ![Reset Linux Password](/assets/qdw2kfTSEeitQxPjo5Pm-unmount-drive.png)
-
 6. Wait for the operating system to boot, then log in with the new root password to verify the change.
 
    ![Reset Linux Password](/assets/C2wnUn7YWnYg3TUjxNgm-root-debian12.png)
 
-<Callout type="warning">
+<warning>
   Write the password to your manager immediately—EDBB does not resend credentials. Treat the helper ISO as a temporary tool; leave it mounted only while you complete the reset.
-</Callout>
+</warning>
 
 ---
 
@@ -95,7 +105,9 @@ description: "Use the EDBB password-helper ISO to reset the Linux root password,
 
 <Steps>
   <Step title="Unmount the ISO">
-    Back in the <strong>Installation → ISO Boot</strong> tab, click <strong>Unmount</strong> so the VPS boots from disk next time.
+    Back in the <strong>Installation → ISO Boot</strong>
+     tab, click <strong>Unmount</strong>
+     so the VPS boots from disk next time.
   </Step>
   <Step title="Disable console access">
     Turn VNC back off if it is only needed for recovery.
@@ -109,8 +121,8 @@ description: "Use the EDBB password-helper ISO to reset the Linux root password,
 
 ## Aftercare Checklist
 
-- Replace password authentication with SSH keys once you confirm access.  
-- Review sudo/root accounts regularly to ensure they’re still required.  
+- Replace password authentication with SSH keys once you confirm access.
+- Review sudo/root accounts regularly to ensure they’re still required.
 - Keep a copy of this playbook in your team’s incident response runbook for quick reference.
 
 With the helper ISO unmounted and the new credential saved, your EDBB VPS is back under your control.
